# camera-service-rust

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
camera_lib/: Cargo.toml
camera_lib/src/: lib.rs
camera_rest_api_lib/: Cargo.toml
camera_rest_api_lib/src/: camera_lib.rs  lib.rs
src/: camera.rs  config.rs  main.rs  server_config.rs
