[package]
name = "camera_rest_api_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
opencv = "0.93.5"
actix-web = "4.9.0"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34+deprecated"
tokio = {version = "1.41.1", features = ["full"]}
log = "0.4.22"
env_logger = "0.11.5"